--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -21,7 +21,7 @@ Teste
 
 body{
     height: 98vh;
-    background-image: url(imagens/fundo.png);
+    background-image: url(../imagens/fundo.png);
     background-size: 100% 100%;
     position: relative;
     
