--- a/Estilos/stylecontacts.css
+++ b/Estilos/stylecontacts.css
@@ -1,6 +1,38 @@
 @charset "UTF-8";
 
+*{
+    padding: 0%;
+    margin: 0%;
+}
+
+body{
+    background-color: wheat;
+}
+
 .icones{
-    width: 45px;
+    width: 30px;
     border-radius: 50%;
+}
+
+header{
+    background-color: black;
+    color: white;
+    padding: 50px 0px 10px 10px;
+    height: 120px;
+    text-align: center;
+
+}
+
+main{
+    background-color: white;
+    margin: 0px 30px 10px 30px;
+}
+
+main li{
+    padding-top: 5px;
+    padding-left: 10px;
+}
+
+#m0{
+    padding-top: 15px;
 }
