--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -20,7 +20,7 @@ Teste
 */
 
 body{
-    height: 98vh;
+    height: 100vh;
     background-image: url(../imagens/fundo.png);
     background-size: 100% 100%;
     position: relative;
@@ -108,4 +108,5 @@ footer{
 footer  a{
     text-decoration: none;
     color: orange;
+    margin: 0%;
 }
